openshift/jenkins.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: jenkins
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 1
    name: jenkins-slave-maven-appdev
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: docker-registry.default.svc:5000/bf-jenkins/jenkins-slave-maven-appdev:v3.7
      generation: null
      importPolicy: {}
      name: v3.7
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: null
    generation: 1
    labels:
      app: jenkins-persistent
      template: jenkins-persistent-template
    name: jenkins
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: jenkins
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: jenkins-persistent
          name: jenkins
      spec:
        containers:
        - env:
          - name: OPENSHIFT_ENABLE_OAUTH
            value: "true"
          - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
            value: "true"
          - name: KUBERNETES_MASTER
            value: https://kubernetes.default:443
          - name: KUBERNETES_TRUST_CERTIFICATES
            value: "true"
          - name: JENKINS_SERVICE_NAME
            value: jenkins
          - name: JNLP_SERVICE_NAME
            value: jenkins-jnlp
          image: registry.access.redhat.com/openshift3/jenkins-2-rhel7@sha256:b866c4bf20de6000d567c62224db88bf46551647654a15656289c5585c421240
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 420
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: jenkins
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 2Gi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/jenkins
            name: jenkins-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: jenkins
        serviceAccountName: jenkins
        terminationGracePeriodSeconds: 30
        volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - jenkins
        from:
          kind: ImageStreamTag
          name: jenkins:latest
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
      template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
    creationTimestamp: null
    labels:
      app: jenkins-persistent
      template: jenkins-persistent-template
    name: jenkins
  spec:
    host: jenkins-bf-jenkins.apps.8cb3.openshift.opentlc.com
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: jenkins
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-05-15T00:36:56Z
        status: "True"
        type: Admitted
      host: jenkins-bf-jenkins.apps.8cb3.openshift.opentlc.com
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"bf-jenkins","name":"jenkins-1","uid":"136afde1-57d8-11e8-84fd-0a0a70f8ed54","apiVersion":"v1","resourceVersion":"347158"}}
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
        jenkins; cpu limit for container jenkins'
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: jenkins
      openshift.io/deployment.name: jenkins-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: jenkins-1-
    labels:
      app: jenkins-persistent
      deployment: jenkins-1
      deploymentconfig: jenkins
      name: jenkins
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: jenkins-1
      uid: 136afde1-57d8-11e8-84fd-0a0a70f8ed54
  spec:
    containers:
    - env:
      - name: OPENSHIFT_ENABLE_OAUTH
        value: "true"
      - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
        value: "true"
      - name: KUBERNETES_MASTER
        value: https://kubernetes.default:443
      - name: KUBERNETES_TRUST_CERTIFICATES
        value: "true"
      - name: JENKINS_SERVICE_NAME
        value: jenkins
      - name: JNLP_SERVICE_NAME
        value: jenkins-jnlp
      image: registry.access.redhat.com/openshift3/jenkins-2-rhel7@sha256:b866c4bf20de6000d567c62224db88bf46551647654a15656289c5585c421240
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 30
        httpGet:
          path: /login
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 420
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 3
      name: jenkins
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /login
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 3
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 3
      resources:
        limits:
          cpu: 500m
          memory: 2Gi
        requests:
          cpu: 50m
          memory: 2Gi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        privileged: false
        runAsUser: 1000970000
        seLinuxOptions:
          level: s0:c31,c20
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/lib/jenkins
        name: jenkins-data
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: jenkins-token-jfbpj
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: jenkins-dockercfg-4rtgw
    nodeName: node1.8cb3.internal
    nodeSelector:
      env: users
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000970000
      seLinuxOptions:
        level: s0:c31,c20
    serviceAccount: jenkins
    serviceAccountName: jenkins
    terminationGracePeriodSeconds: 30
    volumes:
    - name: jenkins-data
      persistentVolumeClaim:
        claimName: jenkins
    - name: jenkins-token-jfbpj
      secret:
        defaultMode: 420
        secretName: jenkins-token-jfbpj
  status:
    phase: Pending
    qosClass: Burstable
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-05-15 00:39:22 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-05-15 00:36:58 +0000 UTC
      openshift.io/deployer-pod.name: jenkins-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: jenkins
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"jenkins","namespace":"bf-jenkins","selfLink":"/apis/apps.openshift.io/v1/namespaces/bf-jenkins/deploymentconfigs/jenkins","uid":"12cfe0ca-57d8-11e8-84fd-0a0a70f8ed54","resourceVersion":"347128","generation":2,"creationTimestamp":"2018-05-15T00:36:57Z","labels":{"app":"jenkins-persistent","template":"jenkins-persistent-template"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp","template.alpha.openshift.io/wait-f [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: jenkins-persistent
      openshift.io/deployment-config.name: jenkins
      template: jenkins-persistent-template
    name: jenkins-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: jenkins
      uid: 12cfe0ca-57d8-11e8-84fd-0a0a70f8ed54
  spec:
    replicas: 1
    selector:
      deployment: jenkins-1
      deploymentconfig: jenkins
      name: jenkins
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: jenkins
          openshift.io/deployment.name: jenkins-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: jenkins-persistent
          deployment: jenkins-1
          deploymentconfig: jenkins
          name: jenkins
      spec:
        containers:
        - env:
          - name: OPENSHIFT_ENABLE_OAUTH
            value: "true"
          - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
            value: "true"
          - name: KUBERNETES_MASTER
            value: https://kubernetes.default:443
          - name: KUBERNETES_TRUST_CERTIFICATES
            value: "true"
          - name: JENKINS_SERVICE_NAME
            value: jenkins
          - name: JNLP_SERVICE_NAME
            value: jenkins-jnlp
          image: registry.access.redhat.com/openshift3/jenkins-2-rhel7@sha256:b866c4bf20de6000d567c62224db88bf46551647654a15656289c5585c421240
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 420
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: jenkins
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 2Gi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/jenkins
            name: jenkins-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: jenkins
        serviceAccountName: jenkins
        terminationGracePeriodSeconds: 30
        volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins
  status:
    replicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace":
        "", "kind": "Service"}]'
      service.openshift.io/infrastructure: "true"
    creationTimestamp: null
    labels:
      app: jenkins-persistent
      template: jenkins-persistent-template
    name: jenkins
  spec:
    ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      name: jenkins
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: jenkins-persistent
      template: jenkins-persistent-template
    name: jenkins-jnlp
  spec:
    ports:
    - name: agent
      port: 50000
      protocol: TCP
      targetPort: 50000
    selector:
      name: jenkins
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
